BE fixes Swagger errors, adds exception messages to the console Updates docker-compose.yml and Dockerfile